--- a/app.json
+++ b/app.json
@@ -1,14 +1,28 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/logs/logs"
+  "pages": [
+    "pages/home-music/index",
+    "pages/home-video/index"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/home-music/index",
+      "text": "音乐",
+      "iconPath": "assets/images/tabbar/music_normal.png",
+      "selectedIconPath": "assets/images/tabbar/music_active.png"
+    },
+    {
+      "pagePath": "pages/home-video/index",
+      "text": "视频",
+      "iconPath": "assets/images/tabbar/video_normal.png",
+      "selectedIconPath": "assets/images/tabbar/video_active.png"
+    }]
+  }
 }
