--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/home-music/index",
-    "pages/home-video/index"
+    "pages/home-video/index",
+    "pages/detail-video/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -12,17 +13,19 @@
   "style": "v2",
   "sitemapLocation": "sitemap.json",
   "tabBar": {
-    "list": [{
-      "pagePath": "pages/home-music/index",
-      "text": "音乐",
-      "iconPath": "assets/images/tabbar/music_normal.png",
-      "selectedIconPath": "assets/images/tabbar/music_active.png"
-    },
-    {
-      "pagePath": "pages/home-video/index",
-      "text": "视频",
-      "iconPath": "assets/images/tabbar/video_normal.png",
-      "selectedIconPath": "assets/images/tabbar/video_active.png"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/home-music/index",
+        "text": "音乐",
+        "iconPath": "assets/images/tabbar/music_normal.png",
+        "selectedIconPath": "assets/images/tabbar/music_active.png"
+      },
+      {
+        "pagePath": "pages/home-video/index",
+        "text": "视频",
+        "iconPath": "assets/images/tabbar/video_normal.png",
+        "selectedIconPath": "assets/images/tabbar/video_active.png"
+      }
+    ]
   }
 }
