--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Marshall-Hao/musicforMP#readme",
   "dependencies": {
-    "@vant/weapp": "^1.10.4"
+    "@vant/weapp": "^1.10.4",
+    "hy-event-store": "^1.2.1"
   }
 }
