--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/home-music/index",
     "pages/home-video/index",
     "pages/detail-video/index",
-    "pages/detail-search/index"
+    "pages/detail-search/index",
+    "pages/detail-lists/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
