feat: layout for the details page,and the way to use space in wxml

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -29,6 +29,12 @@
           "pathName": "pages/home-music/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "detailPlaylists",
+          "pathName": "pages/detail-lists/index",
+          "query": "ranking=newRanking",
+          "scene": null
         }
       ]
     }
