feat: strategey to find out from which action to this target page by using params type

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -35,6 +35,12 @@
           "pathName": "pages/detail-lists/index",
           "query": "ranking=newRanking",
           "scene": null
+        },
+        {
+          "name": "detailmenu",
+          "pathName": "pages/detail-lists/index",
+          "query": "id=4865548839&type=menu",
+          "scene": null
         }
       ]
     }
