--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
+  "requiredBackgroundModes": ["audio"],
   "tabBar": {
     "list": [
       {
